# narracut

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: export_commands.rs  export_runtime.rs  job_commands.rs  lib.rs  media_commands.rs  media_runtime.rs  project_commands.rs  provider_commands.rs  provider_runtime.rs  renderer_commands.rs  renderer_runtime.rs  storage_commands.rs  workflow_commands.rs
apps/desktop/src/components/: brand.tsx  icons.tsx
apps/desktop/src/features/app/: request-gate.d.ts  request-gate.js  request-gate.test.mjs  use-app-controller.ts
apps/desktop/src/features/projects/: project-drawer.tsx  project-home.tsx
apps/desktop/src/features/providers/: provider-panel.tsx
apps/desktop/src/features/stage-studio/: run-history-panel.tsx  stage-studio-model.d.ts  stage-studio-model.js  stage-studio-model.test.mjs  stage-studio-panel.tsx  stage-studio-primitives.tsx  use-stage-studio.ts
apps/desktop/src/features/stage-studio/export/: export-stage-model.d.ts  export-stage-model.js  export-stage-model.test.mjs  export-stage-view.tsx  use-export-stage.ts
apps/desktop/src/features/stage-studio/media/: media-document-summary.tsx  media-file-picker.ts  media-import-view.tsx  media-input-selector.tsx  media-job-panel.tsx  media-scene-plan-view.tsx  media-stage-model.d.ts  media-stage-model.js  media-stage-model.test.mjs  media-stage-view.tsx  media-timeline-view.tsx  use-media-stage.ts
apps/desktop/src/features/stage-studio/renderer/: renderer-stage-model.d.ts  renderer-stage-model.js  renderer-stage-model.test.mjs  renderer-stage-view.tsx  use-renderer-stage.ts
apps/desktop/src/features/stage-studio/views/: artifact-views.tsx  compare-view.tsx  config-view.tsx  history-view.tsx  input-view.tsx  review-view.tsx
apps/desktop/src/features/workbench/: activity-panel.tsx  inspector-panel.tsx  preview-canvas.tsx  stage-rail.tsx  workbench-shell.tsx
apps/desktop/src/lib/: desktop-gateway-model.d.ts  desktop-gateway-model.js  desktop-gateway-model.test.mjs  desktop-gateway.ts  export-commands.ts  job-commands.ts  media-commands-model.d.ts  media-commands-model.js  media-commands-model.test.mjs  media-commands.ts  project-commands.ts  provider-commands.ts  provider-gateway.ts  renderer-commands.ts  storage-commands.ts  workflow-commands.ts
apps/desktop/src/model/: workbench.ts
crates/narracut-contracts/: Cargo.toml
crates/narracut-contracts/src/: lib.rs
crates/narracut-core/: Cargo.toml
crates/narracut-core/src/: error.rs  export_error.rs  export_service.rs  export_types.rs  job_error.rs  job_service.rs  job_types.rs  lib.rs  media_error.rs  media_parser.rs  media_plan.rs  media_service.rs  media_timeline.rs  media_types.rs  project_service.rs  renderer_error.rs  renderer_service.rs  renderer_types.rs  storage_error.rs  storage_service.rs  storage_types.rs  types.rs  workflow_error.rs  workflow_service.rs  workflow_types.rs
crates/narracut-core/tests/: job_service.rs  media_service.rs  project_service.rs  storage_service.rs  workflow_service.rs
crates/narracut-provider/: Cargo.toml
crates/narracut-provider/src/: codex.rs  credential.rs  error.rs  lib.rs  openai.rs  script_contract.rs  service.rs  types.rs
crates/narracut-provider/src/codex/: process.rs  protocol.rs  windows.rs
crates/narracut-provider/tests/fixtures/: windows-process-helper.rs
crates/narracut-renderer/: Cargo.toml
crates/narracut-renderer/src/: lib.rs
crates/narracut-windows-process/: Cargo.toml
crates/narracut-windows-process/src/: lib.rs
docs/: ai-provider-v1.md  alpha-release.md  alpha-user-guide.md  architecture.md  contracts-v1.md  dependencies.md  export-v1.md  ffmpeg-runtime.md  job-service.md  known-limitations.md  media-service.md  project-service.md  recovery-matrix.md  renderer-v1.md  storage-service.md  third-party-licenses.md  workflow-service.md
docs/design/: pr06-fidelity-ledger.md  pr06-ui-spec.md  pr06-workbench-concept.html  pr07-fidelity-ledger.md  pr07-stage-studio-concept.html  pr07-ui-spec.md
fixtures/alpha/: LICENSE.md  README.md  captions.srt  fixture.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
