[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/narracut-contracts",
  "crates/narracut-core",
  "crates/narracut-provider",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["NarraCut contributors"]
edition = "2021"

[workspace.dependencies]
atomic-write-file = "0.3.0"
async-trait = "0.1.89"
keyring = "4.1.5"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
sha2 = "0.11.0"
tempfile = "3.27.0"
time = { version = "0.3.53", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
trash = "5.2.6"
uuid = { version = "1.24.0", features = ["v4"] }
