[package]
name = "narracut-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
atomic-write-file.workspace = true
narracut-contracts = { path = "../narracut-contracts" }
narracut-renderer = { path = "../narracut-renderer" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
time.workspace = true
trash.workspace = true
uuid.workspace = true
