[package]
name = "narracut-provider"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
keyring.workspace = true
narracut-contracts = { path = "../narracut-contracts" }
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.dependencies]
processkit.workspace = true
