[package]
name = "narracut"
version.workspace = true
description = "An inspectable, editable, AI-native video creation workbench"
authors.workspace = true
edition.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "narracut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
async-trait.workspace = true
sha2.workspace = true

[dependencies]
narracut-contracts = { path = "../../../crates/narracut-contracts" }
narracut-core = { path = "../../../crates/narracut-core" }
narracut-provider = { path = "../../../crates/narracut-provider" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
